Add docker compose for starting multiple workers on different ports

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,3 +2,21 @@ services:
   worker-1:
     build:
       context: ./worker
+    ports:
+      - 3001:3001
+    environment:
+      WORKER_PORT: 3001
+  worker-2:
+    build:
+      context: ./worker
+    ports:
+      - 3002:3002
+    environment:
+      WORKER_PORT: 3002
+  worker-3:
+    build:
+      context: ./worker
+    ports:
+      - 3003:3003
+    environment:
+      WORKER_PORT: 3003
