--- a/worker/Cargo.toml
+++ b/worker/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.99"
 axum = "0.8.4"
+env_logger = "0.11.8"
+log = "0.4.28"
 tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
