--- a/worker/Cargo.toml
+++ b/worker/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.99"
-axum = "0.8.4"
+axum = { version = "0.8.4", features = ["macros"] }
 env_logger = "0.11.8"
 log = "0.4.28"
 tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
