--- a/worker/Cargo.toml
+++ b/worker/Cargo.toml
@@ -8,4 +8,5 @@ anyhow = "1.0.99"
 axum = { version = "0.8.4", features = ["macros"] }
 env_logger = "0.11.8"
 log = "0.4.28"
+rand = "0.9.2"
 tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
