--- a/load-balancer/Cargo.toml
+++ b/load-balancer/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+circular-buffer = "1.2.0"
 http-body-util = "0.1.3"
 hyper = { version = "1.7.0", features = ["full"] }
 hyper-util = { version = "0.1.16", features = ["full"] }
