--- a/load-balancer/Cargo.toml
+++ b/load-balancer/Cargo.toml
@@ -10,3 +10,7 @@ hyper = { version = "1.7.0", features = ["full"] }
 hyper-util = { version = "0.1.16", features = ["full"] }
 tokio = { version = "1.47.1", features = ["full"] }
 tower = { version = "0.5.2", features = ["full"] }
+
+[dev-dependencies]
+reqwest = "0.12.23"
+worker = { path = "../worker" }
